src/main/java/com/example/Structural/Bridge/good/AbstractShape.java
package com.example.Structural.Bridge.good;

public abstract class AbstractShape implements Color{


    abstract void getShape();
}
