src/main/java/com/example/Structural/Bridge/bad/RedCircleShape.java
package com.example.Structural.Bridge.bad;

public class RedCircleShape implements Shape{
    @Override
    public String getShape() {
        return " This is a red circle shape!";
    }
}
